<resources>
    <string name="app_name">CareerPlacer</string>
    <!--    MainActivity-->
    <string name="admin_text">Admin</string>
    <string name="add_event">Add Event</string>
    <string name="add_job">Add Job</string>
    <string name="add_notice">Add Notice</string>
    <string name="add_resources">Add Resources</string>
    <string name="resources">Add Resources</string>
    <string name="add_gallery">Add Image</string>
    <string name="delete">Delete</string>
    <string name="delete_notice">Delete Notice</string>

    <!--    AddJobActivity-->
    <string name="title">Title</string>
    <string name="job_date">Last Date To Apply</string>
    <string name="add_url">Url if any</string>
    <string name="job_details">Add Job Details</string>
    <string name="job_position">Position</string>
    <string name="job_salary">Salary</string>
    <string name="description">Description</string>
    <string name="skills">Skills Required</string>
    <string name="job_type">Type of Job</string>
    <string name="job_location">Location</string>
    <string name="about_company">About Company</string>
    <string name="jobUploadBtn">Upload Job</string>

    <string name="select_image">Select Image</string>

    <!--    AddNoticeActivity-->
    <string name="notice_title">Notice Title</string>
    <string name="upload_notice">Upload Notice</string>

    <!--    AddResourcesActivity-->
    <string name="select_file">Select Resume</string>
    <string name="upload_resource">Upload Resource</string>
    <string name="link">ex: www.google.com</string>
    <string name="no_file_selected">No file selected</string>
    <string name="date_placeholder_text">ex: June 20, 2002</string>


    <!--    Universal type string-->

    <string name="file_type">application/pdf|application/msword|application/vnd.ms-powerpoint</string>
    <string name="fail">Something went wrong</string>


    <string name="student_text">Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="dummy_text">Apple is apple making company that is mostly secured ios in the world after android Operating System. Microsoft makes windows os which is for only made for desktop user. Harmony os is the latest os version developed by Huawei for their IOT devices</string>
    <string name="title_activity_show_applied_job">ShowAppliedJobActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="name">Shehzad Malik</string>

</resources>