<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_event"
                    android:background="@drawable/circle_orange"
                    android:padding="15dp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/addEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="12dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/add_event"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_job"
                    android:background="@drawable/circle_green"
                    android:padding="15dp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/addJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="12dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/add_job"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_notice"
                    android:background="@drawable/circle_yellow"
                    android:padding="15dp"
                    android:layout_marginTop="8dp"
                    app:tint="@color/white" />

                <Button
                    android:id="@+id/addNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="12dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/add_notice"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_resources"
                    android:background="@drawable/circle_red"
                    android:padding="15dp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/addResources"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="12dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/add_resources"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_gallery"
                    android:background="@drawable/circle_blue"
                    android:padding="15dp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/addImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/add_gallery"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_delete"
                    android:background="@drawable/circle_purple"
                    android:padding="15dp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="12dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/delete"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>